# muxi-cpp

./: .gitignore  CMakeLists.txt  README.md  USER_GUIDE.md
.github/workflows/: cpp-ci.yml  cpp-rc.yml  cpp-release.yml
include/muxi/: auth.hpp  errors.hpp  formation_client.hpp  muxi.hpp  server_client.hpp  version.hpp  version_check.hpp  webhook.hpp
src/: auth.cpp  errors.cpp  formation_client.cpp  server_client.cpp  transport.cpp  version_check.cpp  webhook.cpp
tests/: CMakeLists.txt  auth_test.cpp  errors_test.cpp  integration_test.cpp  webhook_test.cpp
